2010-05-25 Raúl Mateos <raulofpandora@gmail.com>

	* extensions/update_manager/lib/*.php: Updated year, clean code.

	* extensions/update_manager/lib/libupdate_manager.php: Improved usability.

2010-05-24  Sancho Lerena <slerena@gmail.com>

	* group_view.php: Much nicer view of group view. Added
	column for group icon and for force network modules icon.

2010-05-24 Raúl Mateos <raulofpandora@gmail.com>

	* include/config_process.php: Updated build to new RC2.

	* operation/agentes/sla_view.php, operation/agentes/ver_agente.php,
	godmode/agentes/agent_conf_gis.php, include/styles/menu.css,
	include/styles/pandora.css: Clean code, updated year.

2010-05-24  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.php: fixed fall map in
	the bottom of visual console editor.

2010-05-24  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/setup/performance.php: hidden option perfomance
	'Compact CSS and JS into header' because in more Pandora installations have
	problems. 

2010-05-24  Miguel de Dios  <miguel.dedios@artica.es>

	* include/config_process.php: fixed test php trace level constant
	E_DEPRECATED, now it is correct test version (5.3.0) not 5.2.11.
	Fixes: #3005558 

2010-05-24  Miguel de Dios  <miguel.dedios@artica.es>

	* include/fgraph.php: fixed again when execute fgraphs.php without login in
	the case is execute in host machine (as when execute the cron).

2010-05-21 Raúl Mateos <raulofpandora@gmail.com>

	* several php files: Updated "add" or "create" icons.

2010-05-21  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/estado_generalagente.php: added the style for disabled
	agent and tooltip, in the name agent.
	
	* operation/search_results.php: added the style for disabled
	agent and tooltip.
	
	* godmode/agentes/modificar_agente.php: added tooltip.

2010-05-20 Raúl Mateos <raulofpandora@gmail.com>

	* godmode/alerts/alert_list.php: Added code to show different
	header depending on GET parameter.
